--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -37,7 +37,6 @@
     display: flex;
 
     &__left {
-        // border: 2px solid green;
         width: 47%;
         height: 95%;
         margin-left: 5rem;
@@ -79,13 +78,16 @@
                 height: 30px;
                 // border: 2px solid blue;
             }
-            // border: 2px solid green;
+
+            span {
+                font-size: 18px;
+            }
+
             width: 90%;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
+            align-items: center;
+            justify-content: space-between;
             height: 4.5rem;
-            // line-height: 0.05;
             font-family: "NeueMontreal-Regular";
             font-style: normal;
             text-transform: uppercase;
@@ -97,7 +99,6 @@
 
             &__ask {
                 margin-top: -5px;
-                // border: 2px solid red;
                 line-height: 0;
                 height: 15px;
             }
@@ -105,12 +106,12 @@
         &__box {
             position: relative;
             width: 90%;
-            padding-top: 5%;
+            padding-top: 15%;
             // border: 2px solid purple;
-            height: 1200px;
+            height: 400%;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+
             row-gap: 0px;
             // justify-content: center;
             gap: 15px;
@@ -119,7 +120,7 @@
                 // margin-top: 5%;
                 position: relative;
                 width: 100%;
-                height: 25%;
+                aspect-ratio: 1.97;
                 // object-fit: cover;
                 overflow: hidden;
                 // border: 2px solid red;
@@ -128,21 +129,19 @@
                 gap: 15px;
             }
             &__ctn__two {
-                // margin-top: 5%;
                 position: relative;
                 width: 100%;
-                height: 20%;
-                // object-fit: cover;
+                aspect-ratio: 2.1;
                 overflow: hidden;
-                // border: 2px solid red;
+                // border: 2px solid rgb(13, 255, 0);
                 display: flex;
                 justify-content: space-between;
                 gap: 15px;
                 &__small {
-                    width: 50%;
                     // border: 2px solid blue;
-                    background-color: #151818;
-                    height: 100%;
+                    width: 50%;
+
+                    background-color: transparent;
                 }
 
                 img {
