Done : Projects adjust

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -12,7 +12,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #c9eefc;
+    background-color: #c3e6f4;
     z-index: -2;
 }
 
