--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -2,7 +2,7 @@
     z-index: 8000;
     display: flex;
     position: fixed;
-    top: 1rem;
+    top: 0.5%;
     right: 5rem;
     // mix-blend-mode: exclusion;
 
