--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -120,13 +120,16 @@
                 // margin-top: 5%;
                 position: relative;
                 width: 100%;
-                aspect-ratio: 1.9;
-                object-fit: cover;
+                aspect-ratio: 2;
+
                 overflow: hidden;
                 // border: 2px solid red;
                 display: flex;
                 justify-content: space-between;
                 gap: 15px;
+                img {
+                    width: 100%;
+                }
 
                 &__alone {
                     margin-top: 5%;
@@ -277,7 +280,7 @@
 
     &__button {
         position: absolute;
-        bottom: 1.2vw;
+        bottom: 7%;
         right: 4.7vw;
         // border: 2px solid red;
         width: 15%;
