--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -13,26 +13,28 @@
         aspect-ratio: 2.29;
         position: relative;
         margin-top: -3.5%;
+        overflow: hidden;
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         background-color: rgb(230, 228, 228, 0.835); // rgb(230, 228, 228, 0.835)
     }
-    h2 {
-        font-family: "NeueMontreal-Medium";
-        text-transform: uppercase;
-        font-size: 30px;
-        font-weight: 200;
-        // border: 2px solid red;
-        text-align: center;
-        margin: 0;
-        margin-top: 25px;
-        color: #091429;
-    }
 
     &__box {
-        width: 100%;
+        width: 95%;
         height: 100%;
-
+        margin-inline: auto;
+        h2 {
+            font-family: "NeueMontreal-Medium";
+            text-transform: uppercase;
+            font-size: 25px;
+            font-weight: 200;
+            // border: 2px solid red;
+            text-align: center;
+            margin: 0;
+            margin-top: 30px;
+            mix-blend-mode: difference;
+            color: #dedfdf;
+        }
         &__content {
             // border: 2px solid blue;
             height: 80%;
@@ -45,6 +47,7 @@
                 left: 10%;
                 // border: 2px solid green;
                 width: 40%;
+
                 ul {
                     padding: 0;
                     margin: 0;
@@ -68,23 +71,26 @@
                     font-family: "NeueMontreal-Regular";
                     font-weight: 300;
                     font-size: 16px;
-                    color: #091429;
+                    color: #c7c4c4;
                     background-color: "transparent";
                     transition: 0.2s ease-in-out;
+                    mix-blend-mode: difference;
                 }
                 .liHover {
                     // font-size: 18px;
-                    // mix-blend-mode: difference;
+
                     // background-color: rgba(14, 13, 13, 0.946);
-                    color: rgb(157, 151, 148);
+                    color: rgb(46, 44, 44);
+                    mix-blend-mode: difference;
                     transition: 0.2s ease-in-out;
                 }
             }
             &__view {
-                width: 63%;
-                height: 75%;
+                width: 100%;
+                height: 110%;
+                top: -5%;
 
-                position: relative;
+                position: absolute;
                 // border: 2px solid purple;
                 &__ctn {
                     // border: 2px solid green;
@@ -115,19 +121,23 @@
                 }
             }
             &__text {
-                width: 35%;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
                 // border: 2px solid green;
 
                 &__projects {
+                    display: flex;
+                    justify-content: flex-end;
                     ul {
+                        // border: 2px solid blue;
                         padding: 0;
                         margin: 0;
                         padding-top: 1rem;
-                        height: 120%;
-                        width: 88%;
-                        margin-top: 20%;
+
+                        width: 35%;
+                        margin-top: 5%;
+                        margin-right: 5%;
                     }
                     li {
                         box-sizing: border-box;
@@ -144,9 +154,10 @@
                         font-family: "NeueMontreal-Regular";
                         font-weight: 300;
                         font-size: 16px;
-                        color: #091429;
+                        color: #dedfdf;
                         background-color: "transparent";
                         transition: 0.2s ease-in-out;
+                        mix-blend-mode: difference;
                     }
                     &__project {
                         display: flex;
@@ -167,7 +178,8 @@
                         // font-size: 18px;
                         // mix-blend-mode: difference;
                         // background-color: rgba(14, 13, 13, 0.946);
-                        color: rgb(157, 151, 148);
+                        color: rgb(46, 44, 44);
+                        mix-blend-mode: difference;
                         transition: 0.2s ease-in-out;
                     }
                 }
