--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     z-index: 30000;
-    background-color: rgb(230, 228, 228);
+    background-color: rgba(240, 234, 234);
     display: flex;
     flex-direction: column;
     justify-content: center;
