--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -5,7 +5,7 @@
     right: -33%; //10px;
     height: 98%;
     width: 33%;
-    background-color: rgb(230, 228, 228, 0.73);
+    background-color: rgba(236, 233, 233, 0.93);
     color: rgb(44, 40, 40);
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
@@ -35,7 +35,7 @@
 
     &__item {
         margin: 8% 8% 15% 8%;
-        margin-top: 4%;
+        margin-top: 19%;
         display: flex;
         flex-direction: column;
         gap: 3px;
