--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -13,8 +13,8 @@
 .project__wrapper {
     position: absolute;
     overflow: hidden;
-    background-color: rgba(235, 234, 234, 0.835);
-    top: 50%;
+    background-color: rgb(241, 239, 239);
+    top: 44%;
     left: 50%;
     width: 0%;
     height: 0%;
@@ -24,6 +24,7 @@
     // clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
     z-index: 120;
     backdrop-filter: blur(20px);
+    // border: 2px solid blue;
 }
 
 .project {
@@ -38,24 +39,25 @@
 
     &__left {
         width: 47%;
-        height: 95%;
+        height: 80%;
         margin-left: 5rem;
-        margin-top: 5%;
+        margin-top: 7%;
         display: flex;
         flex-direction: column;
         align-items: center;
+        position: relative;
+        // border: 2px solid blue;
     }
 
     &__pic {
-        // border: 2px solid blue;
         position: relative;
         width: 100%;
-        height: 74%;
+        height: 85%;
         display: flex;
         justify-content: center;
 
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
+        border-top: 1px solid rgb(156, 155, 155);
+        border-bottom: 1px solid rgb(156, 155, 155);
         overflow: hidden;
         overflow-y: scroll;
         &__button {
@@ -72,15 +74,29 @@
         }
 
         &__title {
+            display: flex;
+            align-items: center;
+
+            &__svg {
+                width: 12px;
+                margin-top: 2px;
+            }
             h2 {
                 margin: 0;
                 text-align: left;
-                height: 30px;
+                font-size: 18px;
+
                 // border: 2px solid blue;
             }
 
             span {
-                font-size: 18px;
+                font-family: "Nacelle";
+                color: rgb(44, 37, 37);
+                font-weight: 600;
+                font-size: 14px;
+                gap: 5px;
+                display: flex;
+                align-items: center;
             }
 
             width: 90%;
@@ -105,10 +121,10 @@
         }
         &__box {
             position: relative;
-            width: 90%;
-            padding-top: 15%;
+            width: 95%;
+            padding-top: 0%;
             // border: 2px solid purple;
-            height: 400%;
+            height: 480%;
             display: flex;
             flex-direction: column;
 
@@ -164,7 +180,7 @@
     &__content {
         width: 40%;
         height: 80%;
-        margin-top: 4.5%;
+        margin-top: 8%;
         margin-left: 5%;
         // border: 2px solid orange;
         display: flex;
@@ -172,12 +188,12 @@
         // justify-content: center;
         gap: 15px;
         &__techno {
-            width: 95%;
+            width: 85%;
             // border: 2px solid blueviolet;
             p {
                 margin: 0;
                 padding: 0;
-                text-wrap: nowrap;
+                // text-wrap: nowrap;
             }
         }
 
@@ -196,19 +212,21 @@
         p {
             font-family: "Nacelle";
             font-weight: 200;
-            letter-spacing: 0.5px;
-            font-size: 14px;
+            letter-spacing: 1px;
+            font-size: 15px;
             width: 74%;
             margin: 0;
-            margin-top: 5px;
+
             // border: 2px solid blue;
         }
 
         h3 {
             font-family: "Nacelle";
             font-weight: 800;
-            font-size: 13px;
+            font-size: 14px;
             margin: 0;
+            margin-top: 5px;
+            margin-bottom: 7px;
         }
         &__clientyear {
             width: 73%;
@@ -237,7 +255,7 @@
 
     &__close {
         position: absolute;
-        top: 1.5rem;
+        top: 2.5rem;
         right: 1.5rem;
         height: 30px;
         // border: 2px solid blue;
@@ -248,8 +266,8 @@
         font-family: "Nacelle";
         color: rgb(44, 37, 37);
         font-weight: 600;
-        font-size: 15px;
-        line-height: 1.5;
+        font-size: 14px;
+        line-height: 1.8;
         cursor: pointer;
 
         span {
