--- a/frontend/src/assets/styles/_theme.scss
+++ b/frontend/src/assets/styles/_theme.scss
@@ -7,3 +7,8 @@
     font-family: "NeueMontreal-Regular";
     src: url("./font/PPNeueMontreal-Book.otf");
 }
+
+@font-face {
+    font-family: "VCR_OSD";
+    src: url("./font/VCR_OSD_MONO.ttf");
+}
