--- a/frontend/src/components/Game/Dialog/Dialog.module.scss
+++ b/frontend/src/components/Game/Dialog/Dialog.module.scss
@@ -1,9 +1,9 @@
 .box__dialog {
-    width: 80%;
-    height: 20%;
+    width: 70%;
+    height: 15%;
     // border: 2px solid red;
     position: fixed;
-    left: 10%;
+    left: 15%;
     bottom: 5%;
 
     display: flex;
@@ -15,7 +15,8 @@
     position: relative;
     width: 0%;
     height: 0%;
-    background-color: rgba(236, 233, 233, 0.811);
+    background-color: rgb(29, 28, 28);
+    border: 2px solid white;
     -webkit-backdrop-filter: blur(7px);
     backdrop-filter: blur(7px);
     z-index: 10000;
@@ -23,12 +24,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0;
 
     &__text {
-        font-family: "NeueMontreal-Medium";
-        font-size: 17px;
+        font-family: "VCR_OSD";
+        font-size: 20px;
         width: 90%;
-        height: 90%;
-        opacity: 0;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        color: white;
+        p {
+            // text-align: center;
+            opacity: 0;
+
+            span {
+                opacity: 0;
+            }
+
+            span.revealed {
+                opacity: 1;
+            }
+        }
     }
 }
