--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -10,11 +10,12 @@ body {
 
 .test {
     position: fixed;
-    background-color: white;
+    // background-color: rgb(0, 0, 0);
     mix-blend-mode: difference;
-    opacity: 0;
-    width: 100vw;
-    height: 100vh;
+    opacity: 1;
+    width: 100dvw;
+    height: 100dvh;
+    z-index: 30000;
 }
 
 .canvas {
