--- a/frontend/src/components/MushroomEffect/MushroomEffect.module.scss
+++ b/frontend/src/components/MushroomEffect/MushroomEffect.module.scss
@@ -12,6 +12,7 @@
             height: 5vw;
             width: 100%;
             background-color: rgb(248, 248, 248);
+            opacity: 0;
         }
     }
 }
