--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -12,3 +12,11 @@
     font-family: "VCR_OSD";
     src: url("./font/VCR_OSD_MONO.ttf");
 }
+@font-face {
+    font-family: "Nacelle";
+    src: url("./font/Nacelle-SemiBold.otf");
+}
+@font-face {
+    font-family: "Nacelle-Regular";
+    src: url("./font/Nacelle-Regular.otf");
+}
