--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -1,36 +1,49 @@
 .playView {
     z-index: 8000;
     display: flex;
+    // transform: rotate(180deg);
     position: fixed;
     top: 0.5%;
     right: 5rem;
-    // mix-blend-mode: exclusion;
+    mix-blend-mode: difference;
+    // border: 1px solid white;
+    // border-radius: 3px;
+    height: 25px;
+    align-items: center;
+    width: 100px;
+    justify-content: space-around;
 
     button {
-        font-family: "NeueMontreal-Medium";
-        font-weight: 500;
-        font-size: 1.2rem;
+        // font-family: "NeueMontreal-Medium";
+        // font-weight: 500;
+        // font-size: 1.2rem;
+
+        font-family: "Nacelle";
+        margin-top: 5px;
+        letter-spacing: 1px;
+        line-height: 1.3;
+        font-size: 17px;
         cursor: pointer;
         border: none;
         background-color: transparent;
 
-        mix-blend-mode: difference;
+        // mix-blend-mode: difference;
     }
 
     &__view {
-        color: rgb(27, 24, 24);
+        color: white;
         transition: 0.3s ease-in-out;
     }
     &__viewOff {
-        color: rgba(79, 76, 76, 0.842);
+        color: rgba(188, 188, 188, 0.608);
         transition: 0.3s ease-in-out;
     }
     &__playOff {
-        color: rgba(164, 160, 160, 0.608);
+        color: rgba(188, 188, 188, 0.608);
         transition: 0.3s ease-in-out;
     }
     &__play {
-        color: rgb(27, 24, 24);
+        color: white;
         transition: 0.3s ease-in-out;
     }
 }
