--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -1,22 +1,4 @@
-@font-face {
-    font-family: "NeueMontreal-Medium";
-    src: url("./font/PPNeueMontreal-Medium.otf");
-}
-
-@font-face {
-    font-family: "NeueMontreal-Regular";
-    src: url("./font/PPNeueMontreal-Book.otf");
-}
-
-@font-face {
-    font-family: "VCR_OSD";
-    src: url("./font/VCR_OSD_MONO.ttf");
-}
-@font-face {
-    font-family: "Nacelle";
-    src: url("./font/Nacelle-SemiBold.otf");
-}
-@font-face {
-    font-family: "Nacelle-Regular";
-    src: url("./font/Nacelle-Regular.otf");
-}
+// $primary-color-darkblue: #091429;
+$primary-color-darkblue: #091940e1;
+$white-board: rgba(248, 247, 247, 0.874);
+$white-board-opac: rgba(248, 247, 247, 1);
