--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/theme";
+
 .menu {
     position: fixed;
     z-index: 10000;
@@ -5,12 +7,13 @@
     right: -33%; //10px;
     height: 98%;
     width: 33%;
-    background-color: rgba(236, 233, 233, 0.93);
-    color: rgb(44, 40, 40);
+    background-color: $white-board;
+    color: $primary-color-darkblue;
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
     font-family: "NeueMontreal-Regular";
     font-weight: 900;
+    border-radius: 5px;
 
     display: flex;
     flex-direction: column;
@@ -35,7 +38,7 @@
 
     &__item {
         margin: 8% 8% 15% 8%;
-        margin-top: 19%;
+        margin-top: 15%;
         display: flex;
         flex-direction: column;
         gap: 3px;
@@ -101,7 +104,7 @@
             cursor: pointer;
             font-family: "NeueMontreal-Regular";
             font-weight: 100;
-            color: rgb(44, 40, 40);
+            color: $primary-color-darkblue;
             width: 50%;
             display: flex;
             flex-direction: column;
@@ -129,7 +132,7 @@
             cursor: pointer;
             font-family: "NeueMontreal-Regular";
             font-weight: 100;
-            color: rgb(44, 40, 40);
+            color: $primary-color-darkblue;
         }
         a::after {
             content: "";
