--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -1,10 +1,12 @@
+@import "../../../styles/theme";
+
 .main {
     width: 100%;
     aspect-ratio: 2.19;
     position: absolute;
-    top: 0%;
+    top: 50%;
 
-    z-index: 100;
+    z-index: 3000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,8 +15,9 @@
 .project__wrapper {
     position: absolute;
     overflow: hidden;
-    background-color: rgb(241, 239, 239);
-    top: 44%;
+    background-color: $white-board-opac;
+
+    top: 0%;
     left: 50%;
     width: 0%;
     height: 0%;
@@ -36,12 +39,13 @@
 
     // clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
     display: flex;
+    justify-content: space-between;
 
     &__left {
-        width: 47%;
-        height: 80%;
+        width: 60%;
+        height: 100%;
         margin-left: 5rem;
-        margin-top: 7%;
+        margin-top: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -49,17 +53,34 @@
         // border: 2px solid blue;
     }
 
+    &__pic::-webkit-scrollbar {
+        display: none;
+    }
     &__pic {
         position: relative;
         width: 100%;
-        height: 85%;
+        height: 73%;
+        // border: 2px solid red;
         display: flex;
         justify-content: center;
-
-        border-top: 1px solid rgb(156, 155, 155);
-        border-bottom: 1px solid rgb(156, 155, 155);
         overflow: hidden;
         overflow-y: scroll;
+        margin-top: 8%;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* Internet Explorer 10+ */
+
+        &__wrapper {
+            position: fixed;
+            height: 3%;
+            width: 60%;
+            bottom: 16%; //pic height: 80% margin-top : 7%
+            background: rgb(248, 247, 247);
+            background: linear-gradient(
+                0deg,
+                rgba(248, 247, 247, 1) 22%,
+                rgba(248, 247, 247, 0) 100%
+            );
+        }
         &__button {
             cursor: pointer;
             border: none;
@@ -129,29 +150,27 @@
             flex-direction: column;
 
             row-gap: 0px;
-            // justify-content: center;
             gap: 15px;
 
             &__ctn {
-                // margin-top: 5%;
+                // border: 2px solid red;
                 position: relative;
                 width: 100%;
-                aspect-ratio: 2;
-
-                overflow: hidden;
-                // border: 2px solid red;
                 display: flex;
+                aspect-ratio: 2;
+                overflow: hidden;
                 justify-content: space-between;
                 gap: 15px;
+                border-radius: 7px;
                 img {
                     width: 100%;
                 }
 
                 &__alone {
-                    margin-top: 5%;
-                    width: 100%;
-                    height: 80%;
-                    aspect-ratio: 1.97;
+                    width: 95%;
+                    height: 92%;
+                    border-radius: 7px;
+                    overflow: hidden;
                     // border: 2px solid red;
                 }
             }
@@ -163,11 +182,15 @@
                 // border: 2px solid rgb(13, 255, 0);
                 display: flex;
                 justify-content: space-between;
+                align-items: center;
                 gap: 15px;
+
                 &__small {
                     // border: 2px solid blue;
                     width: 50%;
-
+                    height: 100%;
+                    border-radius: 7px;
+                    overflow: hidden;
                     background-color: transparent;
                 }
 
@@ -178,14 +201,13 @@
         }
     }
     &__content {
-        width: 40%;
-        height: 80%;
+        width: 33%;
+        height: 70%;
         margin-top: 8%;
         margin-left: 5%;
         // border: 2px solid orange;
         display: flex;
         flex-direction: column;
-        // justify-content: center;
         gap: 15px;
         &__techno {
             width: 85%;
@@ -202,7 +224,7 @@
         }
         &__client {
             // border: 2px solid purple;
-            width: 70%;
+            width: 100%;
         }
 
         &__text {
@@ -210,7 +232,7 @@
         }
 
         p {
-            font-family: "Nacelle";
+            font-family: "NeueMontreal-Regular";
             font-weight: 200;
             letter-spacing: 1px;
             font-size: 15px;
