--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -1,4 +1,4 @@
-// $primary-color-darkblue: #091429;
-$primary-color-darkblue: #091940e1;
+$primary-color-darkblue: #091429;
+$primary-color-mediumblue: #091940e1;
 $white-board: rgba(248, 247, 247, 0.874);
 $white-board-opac: rgba(248, 247, 247, 1);
