--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/theme";
+@import "../../styles/font";
 
 .title {
     width: 94%;
@@ -14,7 +15,7 @@
         // color: rgb(231, 231, 231);
         color: $primary-color-darkblue;
         // mix-blend-mode: difference;
-        font-size: 12.7rem;
+        font-size: $fontsize-title;
         font-weight: 500;
         line-height: 1.2;
         margin: 0;
