--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -1,27 +1,22 @@
+@import "../../styles/font";
+@import "../../styles/theme";
+
 .navbar {
+    // border: 2px solid red;
     z-index: 5000;
     position: fixed;
-
-    top: 3%;
-
-    // right: 7px;
-    left: 5px;
-    // border: 2px solid red;
-
+    top: clamp(15px, 5%, 60px);
+    left: $nav-margin-right;
+    padding-top: 15px;
+    height: clamp(170px, 12vw, 290px);
+    width: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    // gap: 10px;
     font-family: "Nacelle";
-
     letter-spacing: 1px;
-    font-size: 15px;
+    font-size: $fontsize-m;
     line-height: 3;
-    height: 200px;
-    width: 30px;
-    padding-top: 15px;
-
     // background-color: rgba(241, 239, 239, 0.83); //rgba(251, 247, 247, 0.835)
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
@@ -48,7 +43,7 @@
         &__wrapper {
             // border: 2px solid rgb(43, 176, 48);
             overflow: hidden;
-            height: 15px;
+            height: $fontsize-m;
             display: flex;
             flex-direction: column;
             transform: rotate(-180deg);
@@ -71,8 +66,8 @@
             // clip-path: polygon(0 0, 100% 0, 100% 90%, 75% 100%, 0 100%);
 
             span {
-                line-height: 1.3;
-                height: 15px;
+                line-height: 1.1;
+                height: $fontsize-m;
                 margin: 0;
             }
         }
