--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/theme";
+@import "../../styles/font";
 
 .projects {
     display: flex;
@@ -29,32 +30,10 @@
         &__title {
             position: absolute;
             z-index: -1;
-
-            &__test {
-                z-index: -1;
-                position: absolute;
-                display: flex;
-                flex-direction: column;
-                gap: 0;
-                transform: rotate(-90deg);
-                top: 9rem;
-                left: -10rem;
-
-                h2 {
-                    margin: 0;
-                    padding: 0;
-                    font-family: "NeueMontreal-Medium";
-                    text-transform: uppercase;
-                    font-size: 3.5rem;
-                    height: 2.9rem;
-                    color: $primary-color-darkblue;
-                }
-            }
-
             h2 {
                 font-family: "NeueMontreal-Medium";
                 text-transform: uppercase;
-                font-size: 14rem;
+                font-size: $fontsize-title;
 
                 font-weight: 200;
                 // border: 2px solid red;
