--- a/frontend/src/components/Title/Title.module.scss
+++ b/frontend/src/components/Title/Title.module.scss
@@ -35,7 +35,7 @@
     font-family: "NeueMontreal-Medium";
     font-weight: 500;
     letter-spacing: 1px;
-    font-size: 18px;
+    font-size: $fontsize-m;
     text-transform: uppercase;
     // color: rgb(231, 231, 231);
     color: $primary-color-darkblue;
