--- a/frontend/src/components/Logo/Logo.module.scss
+++ b/frontend/src/components/Logo/Logo.module.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 1%;
     left: clamp(3px, 0.6vw, 9px);
-    width: 25px;
+    width: clamp(15px, 15px + 0.7vw, 30px);
     z-index: 6000;
     mix-blend-mode: difference;
 }
