--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -1,33 +1,26 @@
+@import "../../styles/font";
+
 .playView {
     z-index: 8000;
     display: flex;
-    // transform: rotate(180deg);
     position: fixed;
     top: 1%;
-    right: 3rem;
+    right: clamp(30px, 2vw, 50px);
     mix-blend-mode: difference;
-    // border: 1px solid white;
-    // border-radius: 3px;
     height: 25px;
     align-items: center;
-    width: 100px;
+    width: clamp(80px, 8vw, 110px);
     justify-content: space-around;
+    // border: 2px solid red;
 
     button {
         font-family: "NeueMontreal-Medium";
         font-weight: 500;
-        font-size: 1.2rem;
-
-        // font-family: "Nacelle";
-        // margin-top: 5px;
-        // letter-spacing: 1px;
-        // line-height: 1.3;
-        // font-size: 17px;
+        font-size: $fontsize-l;
         cursor: pointer;
         border: none;
         background-color: transparent;
-
-        // mix-blend-mode: difference;
+        margin: 0;
     }
 
     &__view {
@@ -35,11 +28,11 @@
         transition: 0.3s ease-in-out;
     }
     &__viewOff {
-        color: rgba(188, 188, 188, 0.608);
+        color: rgba(188, 188, 188, 0.383);
         transition: 0.3s ease-in-out;
     }
     &__playOff {
-        color: rgba(188, 188, 188, 0.608);
+        color: rgba(188, 188, 188, 0.383);
         transition: 0.3s ease-in-out;
     }
     &__play {
