--- a/frontend/src/styles/_font.scss
+++ b/frontend/src/styles/_font.scss
@@ -24,4 +24,6 @@
 }
 
 $fontsize-title: clamp(f.rem(120), 13vw, f.rem(290));
+$fontsize-title-second: clamp(f.rem(15), 1.1vw, f.rem(25));
 $fontsize-m: clamp(f.rem(15), 1.1vw, f.rem(18));
+$fontsize-l: clamp(f.rem(16), 12px + 0.5vw, f.rem(24));
