--- a/frontend/src/styles/_font.scss
+++ b/frontend/src/styles/_font.scss
@@ -25,5 +25,9 @@
 
 $fontsize-title: clamp(f.rem(120), 13vw, f.rem(290));
 $fontsize-title-second: clamp(f.rem(15), 1.1vw, f.rem(25));
-$fontsize-m: clamp(f.rem(15), 1.1vw, f.rem(18));
+$fontsize-s: clamp(f.rem(14), 1vw, f.rem(22));
+$fontsize-m: clamp(f.rem(15), 1.1vw, f.rem(21));
 $fontsize-l: clamp(f.rem(16), 12px + 0.5vw, f.rem(24));
+$fontsize-xl: clamp(f.rem(20), 12px + 1.5vw, f.rem(28));
+
+$fontsize-project: clamp(f.rem(15), 0.9vw, f.rem(22));
