--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/theme";
+@import "../../../styles/font";
 
 .main {
     width: 100%;
@@ -74,12 +75,8 @@
             height: 3%;
             width: 60%;
             bottom: 16%; //pic height: 80% margin-top : 7%
-            background: rgb(248, 247, 247);
-            background: linear-gradient(
-                0deg,
-                rgba(248, 247, 247, 1) 22%,
-                rgba(248, 247, 247, 0) 100%
-            );
+            background: rgb(240, 238, 238);
+            background: linear-gradient(0deg, rgb(240, 238, 238) 22%, rgba(248, 247, 247, 0) 100%);
         }
         &__button {
             cursor: pointer;
@@ -96,7 +93,18 @@
 
         &__title {
             display: flex;
-            align-items: center;
+            align-items: baseline;
+            width: 90%;
+            display: flex;
+            justify-content: space-between;
+            height: 3.5rem;
+            font-family: "NeueMontreal-Regular";
+            font-style: normal;
+            text-transform: uppercase;
+            font-size: 0.7rem;
+            margin: 0;
+            padding: 0;
+            margin-top: 15px;
 
             &__svg {
                 width: 12px;
@@ -104,35 +112,21 @@
             }
             h2 {
                 margin: 0;
+                padding: 0;
                 text-align: left;
-                font-size: 18px;
-
-                // border: 2px solid blue;
+                font-size: $fontsize-xl;
             }
 
             span {
-                font-family: "Nacelle";
-                color: rgb(44, 37, 37);
-                font-weight: 600;
-                font-size: 14px;
+                font-family: "NeueMontreal-Regular";
+                color: $primary-color-darkblue;
+                font-weight: 500;
+                font-size: $fontsize-s;
                 gap: 5px;
                 display: flex;
                 align-items: center;
+                // border: 2px solid rgb(27, 200, 56);
             }
-
-            width: 90%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 4.5rem;
-            font-family: "NeueMontreal-Regular";
-            font-style: normal;
-            text-transform: uppercase;
-            font-size: 0.7rem;
-            margin: 0;
-            padding: 0;
-
-            margin-bottom: 20px;
 
             &__ask {
                 margin-top: -5px;
@@ -186,7 +180,6 @@
                 gap: 15px;
 
                 &__small {
-                    // border: 2px solid blue;
                     width: 50%;
                     height: 100%;
                     border-radius: 7px;
@@ -212,7 +205,6 @@
         color: $primary-color-darkblue;
         &__techno {
             width: 85%;
-            // border: 2px solid blueviolet;
             p {
                 margin: 0;
                 padding: 0;
@@ -223,7 +215,6 @@
             width: 5%;
         }
         &__client {
-            // border: 2px solid purple;
             width: 100%;
         }
 
@@ -235,7 +226,7 @@
             font-family: "NeueMontreal-Regular";
             font-weight: 200;
             letter-spacing: 1px;
-            font-size: 15px;
+            font-size: $fontsize-project;
             width: 74%;
             margin: 0;
             line-height: 1.3;
@@ -244,9 +235,8 @@
         }
 
         h3 {
-            font-family: "Nacelle";
-            font-weight: 800;
-            font-size: 14px;
+            font-family: "NeueMontreal-Medium";
+            font-size: $fontsize-project;
             margin: 0;
             margin-top: 5px;
             margin-bottom: 7px;
@@ -321,15 +311,15 @@
 
     &__button {
         position: absolute;
-        bottom: 7%;
+        bottom: 8.5%;
         right: 4.7vw;
         // border: 2px solid red;
-        width: 15%;
+        width: 12.5%;
 
         span {
-            font-family: "Nacelle";
-            font-size: 22px;
-            color: #091429;
+            font-family: "NeueMontreal-Regular";
+            color: $primary-color-darkblue;
+            font-size: $fontsize-l;
         }
 
         &__btn {
