--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/theme";
+@import "../../styles/font";
 
 .menu {
     position: fixed;
@@ -7,6 +8,7 @@
     right: -33%; //10px;
     height: 98%;
     width: 33%;
+    min-width: 380px;
     background-color: $white-board;
     color: $primary-color-darkblue;
     -webkit-backdrop-filter: blur(13px);
@@ -46,9 +48,9 @@
         &__wrapper {
             display: flex;
             flex-direction: column;
-            font-size: 75px;
+            font-size: $fontsize-menu;
             overflow: hidden;
-            height: 73px;
+            height: $fontsize-menu;
             width: 100%;
             text-align: left;
             // border: 2px solid red;
@@ -67,9 +69,9 @@
             margin-top: -15px;
             span {
                 margin: 0;
-
+                margin-top: 2px;
                 padding: 0;
-                height: 73px;
+                height: $fontsize-menu;
             }
         }
         &__span:hover {
