--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -196,25 +196,63 @@
         }
     }
     &__content {
-        width: 33%;
         height: 70%;
+        width: 25%;
         margin-top: 6%;
-        margin-left: 5%;
+        margin-left: 3%;
+        margin-right: 8%;
         // border: 2px solid orange;
         display: flex;
         flex-direction: column;
         gap: 15px;
+
         color: $primary-color-darkblue;
+
+        font-family: "NeueMontreal-Regular";
+        font-weight: 200;
+        letter-spacing: 1px;
+        font-size: $fontsize-project;
+        line-height: 1.3;
+
+        p {
+            margin: 0;
+            padding: 0;
+        }
+        h3 {
+            font-family: "NeueMontreal-Medium";
+            font-size: $fontsize-project;
+            margin: 0;
+            margin-top: 5px;
+            margin-bottom: 7px;
+        }
+
+        &__techno,
+        &__client,
+        &__year {
+            font-family: "NeueMontreal-Regular";
+            font-weight: 200;
+            letter-spacing: 1px;
+            font-size: $fontsize-project;
+            width: 74%;
+            margin: 0;
+            line-height: 1.3;
+        }
+
         &__techno {
-            width: 85%;
-            p {
-                margin: 0;
-                padding: 0;
+            width: 75%;
+
+            &__text {
+                font-size: $fontsize-s;
+                text-transform: uppercase;
             }
         }
 
         &__year {
-            width: 5%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            width: 15%;
+            // border: 2px solid red;
         }
         &__client {
             width: 100%;
@@ -224,46 +262,20 @@
             text-transform: uppercase;
         }
 
-        p {
-            font-family: "NeueMontreal-Regular";
-            font-weight: 200;
-            letter-spacing: 1px;
-            font-size: $fontsize-project;
-            width: 74%;
-            margin: 0;
-            line-height: 1.3;
-
-            // border: 2px solid blue;
-        }
-
-        h3 {
-            font-family: "NeueMontreal-Medium";
-            font-size: $fontsize-project;
-            margin: 0;
-            margin-top: 5px;
-            margin-bottom: 7px;
-        }
         &__clientyear {
-            width: 73%;
+            width: 100%;
             display: flex;
             justify-content: space-between;
         }
 
         &__year__text {
-            width: 74%;
+            width: 100%;
             display: flex;
-            justify-content: space-between;
+            justify-content: right;
             p {
                 font-size: 16px;
                 text-align: right;
                 line-height: 2.4;
-            }
-            &__ask {
-                line-height: 2;
-                font-size: 14px;
-                font-family: "NeueMontreal-Regular";
-                font-weight: 200;
-                letter-spacing: 1px;
             }
         }
     }
